[tool.poetry]
authors = ["Raafat <rafatzahran90@gmail.com>"]
description = ""
name = "rabbitamqptest3"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.8"
colorlog = ">=5.0.1,<6.0.0"
pika = "^1.3.0"
setuptools = "^63.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"
tox = "^3.25.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
