[tool.poetry]
authors = ["Raafat <rafatzahran90@gmail.com>"]
description = ""
name = "rabbitamqp"
version = "0.2.4"

[tool.poetry.dependencies]
python = "^3.8"
colorlog = ">=5.0.1,<6.0.0"
pika = "^1.3.0"
requests = "^2.28.1"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"
tox = "^3.25.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
